# internal/handlers/cashier.admin.go
@@ -91,8 +91,17 @@ func (t *CashierAdmin) SetupRouter() *gin.Engine {
 	// 交易相关路由
 	transactions := api.Group("/transactions")
 	{
-		transactions.GET("/list", t.ListTransactions)    // 交易列表
-		transactions.GET("/detail", t.TransactionDetail) // 交易详情
+		transactions.POST("/list", t.ListTransactions)                // 交易列表
+		transactions.POST("/detail", t.TransactionDetail)             // 交易详情
+		transactions.POST("/today-stats", t.GetTransactionTodayStats) // 今日统计
 	}
+
+	// 出纳员相关路由
+	cashiers := api.Group("/cashiers")
+	{
+		cashiers.POST("/list", t.ListCashiers)    // 出纳员列表
+		cashiers.POST("/detail", t.CashierDetail) // 出纳员详情
+	}
+
 	return router
 }
